# mersh

./: .gitignore  Cargo.toml  README.md
docs/: _config.yml  base.css  index.html  post1.html  post2.html  post3.html
docs/Post_05_09_2016/: .base-Pnt2d.rs.swp  Coord2d-impl-snippet-0.html  Coord2d-impl-snippet-1.html  Coord2d-impl-snippet-1.rs  Coord2d-snippet.rs  Elements-snippet.html  Pnt2d-Vec2d-snippet.html  Pnt2d-Vec2d-snippet.rs  Pnt2d-impl-snippet.html  Post_05_09_2016.html  Vec2d-impl-snippet.html  Vec2d-impl-snippet.rs  Views2d-snippet.html  Views2d-snippet.rs  base-snippet.html
docs/Post_07_09_2016/: Connections-snippet.html  Connections-snippet.rs  Post_07_09_2016.html  Topology-snippet.html  Topology-snippet.rs
docs/Post_10_08_2016/: Coord2d-impl-snippet-0.rs  Coord2d-snippet.html  Pnt2d-impl-snippet.rs  base-snippet.rs
docs/Post_25_08_2016/: Elements-snippet.rs  Post_25_08_2016.html  Vertex2d-snippet.html  Vertex2d-snippet.rs
docs/_includes/: footer.html
docs/_posts/: 2016-09-01-welcome-to-jekyll.markdown
docs/_sass/: _layout.scss
docs/css/: base.css  layout.css
docs/post2/: index.html
docs/posts/: post1.html  post3.html  post4.html  post5.html
src/: base.rs  cmd.rs  connections.rs  elements.rs  interpreter.rs  lib.rs  mesh.rs  spolygone.rs  tag.rs  topology.rs  vertices.rs  views.rs
tests/: base.rs  elements.rs  interpreter.rs  mesh.rs  square.rs  tag.rs  views.rs
