[package]
name = "mersh"
version = "0.0.1"
authors = ["AlexandreImperiale <https://github.com/AlexandreImperiale>"]
description = "A rust crate for manipulating meshes."
documentation = "https://alexandreimperiale.github.io/mersh-doc/"
homepage = "https://alexandreimperiale.github.io/mersh/"
repository = "https://github.com/AlexandreImperiale/mersh"

[dependencies]
clippy = { version = "*", optional = true }
serde = "1.0.29"
serde_derive = "1.0.29"
serde_json = "1.0.11"
rouille = "2.1.0"
